Refactor: Arrays.asList -> List.of 변경
List.of를 사용하여 불변객체로 생성하였다.